8319111: Mismatched MemorySegment heap access is not consistently intrinsified