src/jdk.incubator.vector/share/classes/jdk/incubator/vector/AbstractMask.java
@@ -75,7 +75,7 @@ abstract class AbstractMask<E> extends VectorMask<E> {
         VectorSupport.store(
             vsp.maskType(), vsp.elementType(), laneCount,
             bits, (long) i + Unsafe.ARRAY_BOOLEAN_BASE_OFFSET,
-            this, bits, i,
+            this, bits, i, false,
             (c, idx, s) -> System.arraycopy(s.getBits(), 0, c, (int) idx, s.length()));
 
     }
