src/jdk.incubator.vector/share/classes/jdk/incubator/vector/DoubleVector.java
@@ -3063,7 +3063,7 @@ public abstract class DoubleVector extends AbstractVector<Double> {
             vsp.vectorType(), vsp.elementType(), vsp.laneCount(),
             a, arrayAddress(a, offset),
             this,
-            a, offset,
+            a, offset, false,
             (arr, off, v)
             -> v.stOp(arr, (int) off,
                       (arr_, off_, i, e) -> arr_[off_ + i] = e));
@@ -3295,7 +3295,7 @@ public abstract class DoubleVector extends AbstractVector<Double> {
         return VectorSupport.load(
             vsp.vectorType(), vsp.elementType(), vsp.laneCount(),
             a, arrayAddress(a, offset),
-            a, offset, vsp,
+            a, offset, vsp, false,
             (arr, off, s) -> s.ldOp(arr, (int) off,
                                     (arr_, off_, i) -> arr_[off_ + i]));
     }
@@ -3312,7 +3312,7 @@ public abstract class DoubleVector extends AbstractVector<Double> {
         return VectorSupport.loadMasked(
             vsp.vectorType(), maskClass, vsp.elementType(), vsp.laneCount(),
             a, arrayAddress(a, offset), m, offsetInRange,
-            a, offset, vsp,
+            a, offset, vsp, false,
             (arr, off, s, vm) -> s.ldOp(arr, (int) off, vm,
                                         (arr_, off_, i) -> arr_[off_ + i]));
     }
@@ -3414,7 +3414,7 @@ public abstract class DoubleVector extends AbstractVector<Double> {
         VectorSupport.store(
             vsp.vectorType(), vsp.elementType(), vsp.laneCount(),
             a, arrayAddress(a, offset),
-            this, a, offset,
+            this, a, offset, false,
             (arr, off, v)
             -> v.stOp(arr, (int) off,
                       (arr_, off_, i, e) -> arr_[off_+i] = e));
@@ -3431,7 +3431,7 @@ public abstract class DoubleVector extends AbstractVector<Double> {
         VectorSupport.storeMasked(
             vsp.vectorType(), maskClass, vsp.elementType(), vsp.laneCount(),
             a, arrayAddress(a, offset),
-            this, m, a, offset,
+            this, m, a, offset, false,
             (arr, off, v, vm)
             -> v.stOp(arr, (int) off, vm,
                       (arr_, off_, i, e) -> arr_[off_ + i] = e));
