src/jdk.incubator.vector/share/classes/jdk/incubator/vector/FloatVector.java
@@ -3069,7 +3069,7 @@ public abstract class FloatVector extends AbstractVector<Float> {
             vsp.vectorType(), vsp.elementType(), vsp.laneCount(),
             a, arrayAddress(a, offset),
             this,
-            a, offset,
+            a, offset, false,
             (arr, off, v)
             -> v.stOp(arr, (int) off,
                       (arr_, off_, i, e) -> arr_[off_ + i] = e));
@@ -3282,7 +3282,7 @@ public abstract class FloatVector extends AbstractVector<Float> {
         return VectorSupport.load(
             vsp.vectorType(), vsp.elementType(), vsp.laneCount(),
             a, arrayAddress(a, offset),
-            a, offset, vsp,
+            a, offset, vsp, false,
             (arr, off, s) -> s.ldOp(arr, (int) off,
                                     (arr_, off_, i) -> arr_[off_ + i]));
     }
@@ -3299,7 +3299,7 @@ public abstract class FloatVector extends AbstractVector<Float> {
         return VectorSupport.loadMasked(
             vsp.vectorType(), maskClass, vsp.elementType(), vsp.laneCount(),
             a, arrayAddress(a, offset), m, offsetInRange,
-            a, offset, vsp,
+            a, offset, vsp, false,
             (arr, off, s, vm) -> s.ldOp(arr, (int) off, vm,
                                         (arr_, off_, i) -> arr_[off_ + i]));
     }
@@ -3383,7 +3383,7 @@ public abstract class FloatVector extends AbstractVector<Float> {
         VectorSupport.store(
             vsp.vectorType(), vsp.elementType(), vsp.laneCount(),
             a, arrayAddress(a, offset),
-            this, a, offset,
+            this, a, offset, false,
             (arr, off, v)
             -> v.stOp(arr, (int) off,
                       (arr_, off_, i, e) -> arr_[off_+i] = e));
@@ -3400,7 +3400,7 @@ public abstract class FloatVector extends AbstractVector<Float> {
         VectorSupport.storeMasked(
             vsp.vectorType(), maskClass, vsp.elementType(), vsp.laneCount(),
             a, arrayAddress(a, offset),
-            this, m, a, offset,
+            this, m, a, offset, false,
             (arr, off, v, vm)
             -> v.stOp(arr, (int) off, vm,
                       (arr_, off_, i, e) -> arr_[off_ + i] = e));
